--- a/SevenWonders.Tests/SevenWonders.Tests.csproj
+++ b/SevenWonders.Tests/SevenWonders.Tests.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SevenWonders\SevenWonders.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
